Fix 'purple' in manual dark mode

--- a/pages/index.module.css
+++ b/pages/index.module.css
@@ -19,7 +19,7 @@
   padding: 0px 6px 4px;
 }
 .highlightPurple.dark {
-  display: block;
+  display: inline;
 }
 @media (prefers-color-scheme: dark) {
   .highlightPurple {
